Moved all commands to a new package.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,12 +26,16 @@ dist.jar=${dist.dir}/TranxCraft.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.bukkit-1.6.4-R0.1-20130920.011542-1.jar=C:\\Users\\Dan\\Desktop\\Imports For Java Plugins\\bukkit-1.6.4-R0.1-20130920.011542-1.jar
+file.reference.bukkit-1.6.4-R0.1-20130923.182036-4.jar=C:\\Users\\Dan\\Desktop\\Imports\\bukkit-1.6.4-R0.1-20130923.182036-4.jar
 file.reference.spigot.jar=C:\\Users\\Dan\\Desktop\\Imports For Java Plugins\\spigot.jar
+file.reference.spigot.jar-1=C:\\Users\\Dan\\Desktop\\Imports\\spigot.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.bukkit-1.6.4-R0.1-20130920.011542-1.jar}:\
-    ${file.reference.spigot.jar}
+    ${file.reference.spigot.jar}:\
+    ${file.reference.bukkit-1.6.4-R0.1-20130923.182036-4.jar}:\
+    ${file.reference.spigot.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
