--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TranxCraft
+application.vendor=Dan
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,18 +25,17 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/TranxCraft.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.bukkit-1.6.4-R0.1-20130920.011542-1.jar=C:\\Users\\Dan\\Desktop\\Imports For Java Plugins\\bukkit-1.6.4-R0.1-20130920.011542-1.jar
-file.reference.bukkit-1.6.4-R0.1-20130923.182036-4.jar=C:\\Users\\Dan\\Desktop\\Imports\\bukkit-1.6.4-R0.1-20130923.182036-4.jar
-file.reference.spigot.jar=C:\\Users\\Dan\\Desktop\\Imports For Java Plugins\\spigot.jar
-file.reference.spigot.jar-1=C:\\Users\\Dan\\Desktop\\Imports\\spigot.jar
+file.reference.bukkit-1.7.jar=C:\\Java Plugins\\Libraries\\bukkit-1.7.jar
+file.reference.BukkitLib.jar=..\\Libraries\\BukkitLib.jar
+file.reference.craftbukkit-1.7.jar=C:\\Java Plugins\\Libraries\\craftbukkit-1.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bukkit-1.6.4-R0.1-20130920.011542-1.jar}:\
-    ${file.reference.spigot.jar}:\
-    ${file.reference.bukkit-1.6.4-R0.1-20130923.182036-4.jar}:\
-    ${file.reference.spigot.jar-1}
+    ${file.reference.BukkitLib.jar}:\
+    ${file.reference.bukkit-1.7.jar}:\
+    ${file.reference.craftbukkit-1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,6 +55,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.BukkitLib.jar=C:\\Java Plugins\\Libraries\\BukkitLib-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
