--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: TranxCraft
 main: com.wickedgaminguk.TranxCraft.TranxCraft
-version: 2.0
+version: 3.0
 authors: [HeXeRei452]
 description: The custom developed plugin for TranxCraft.
 website: http://www.tranxcraft.com/
@@ -35,3 +35,6 @@ commands:
       usage: /<command> <player> <reason>
       description: Slams a player to the ground.
       aliases: [gt, gs]
+    catapult:
+      usage: /<command> <player>
+      description: Catapults a player.
