Made the kick message for the fuckoff command to be a little harsher.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,14 +28,20 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.bukkit-1.7.jar=C:\\Java Plugins\\Libraries\\bukkit-1.7.jar
+file.reference.bukkit-1.7.jar-1=G:\\Java Projects\\Libaries\\bukkit-1.7.jar
 file.reference.BukkitLib.jar=..\\Libraries\\BukkitLib.jar
+file.reference.BukkitLib.jar-1=G:\\Java Projects\\Libaries\\BukkitLib.jar
 file.reference.craftbukkit-1.7.jar=C:\\Java Plugins\\Libraries\\craftbukkit-1.7.jar
+file.reference.craftbukkit-1.7.jar-1=G:\\Java Projects\\Libaries\\craftbukkit-1.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.BukkitLib.jar}:\
     ${file.reference.bukkit-1.7.jar}:\
-    ${file.reference.craftbukkit-1.7.jar}
+    ${file.reference.craftbukkit-1.7.jar}:\
+    ${file.reference.BukkitLib.jar-1}:\
+    ${file.reference.bukkit-1.7.jar-1}:\
+    ${file.reference.craftbukkit-1.7.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,6 +62,7 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
 javadoc.reference.BukkitLib.jar=C:\\Java Plugins\\Libraries\\BukkitLib-javadoc.jar
+javadoc.reference.BukkitLib.jar-1=G:\\Java Projects\\Libaries\\BukkitLib-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
