Added e-mail functionality, it will send an e-mail when the server starts. More is planned.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,21 +27,21 @@ dist.jar=${dist.dir}/TranxCraft.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.bukkit-1.7.jar=C:\\Java Plugins\\Libraries\\bukkit-1.7.jar
+file.reference.activation.jar=G:\\Java Projects\\Libaries\\activation.jar
 file.reference.bukkit-1.7.jar-1=G:\\Java Projects\\Libaries\\bukkit-1.7.jar
-file.reference.BukkitLib.jar=..\\Libraries\\BukkitLib.jar
 file.reference.BukkitLib.jar-1=G:\\Java Projects\\Libaries\\BukkitLib.jar
-file.reference.craftbukkit-1.7.jar=C:\\Java Plugins\\Libraries\\craftbukkit-1.7.jar
 file.reference.craftbukkit-1.7.jar-1=G:\\Java Projects\\Libaries\\craftbukkit-1.7.jar
+file.reference.mail.jar=G:\\Java Projects\\Libaries\\mail.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.BukkitLib.jar}:\
-    ${file.reference.bukkit-1.7.jar}:\
-    ${file.reference.craftbukkit-1.7.jar}:\
     ${file.reference.BukkitLib.jar-1}:\
     ${file.reference.bukkit-1.7.jar-1}:\
-    ${file.reference.craftbukkit-1.7.jar-1}
+    ${file.reference.craftbukkit-1.7.jar-1}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,14 +61,22 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.BukkitLib.jar=C:\\Java Plugins\\Libraries\\BukkitLib-javadoc.jar
 javadoc.reference.BukkitLib.jar-1=G:\\Java Projects\\Libaries\\BukkitLib-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=
-manifest.file=manifest.mf
+manifest.file=META-INF/manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
