--- a/src/config.yml
+++ b/src/config.yml
@@ -13,6 +13,8 @@ Moderators:
 Donators:
   - ''
 
+e-mails: wicked@wickedgaminguk.com, hexerei452@gmail.com
+
 #Auto Broadcast  
 prefix: '&4[TranxCraft-Bot]'
 
