--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ file.reference.bukkit-1.7.jar-1=G:\\Java Projects\\Libaries\\bukkit-1.7.jar
 file.reference.BukkitLib.jar-1=G:\\Java Projects\\Libaries\\BukkitLib.jar
 file.reference.craftbukkit-1.7.jar-1=G:\\Java Projects\\Libaries\\craftbukkit-1.7.jar
 file.reference.mail.jar=G:\\Java Projects\\Libaries\\mail.jar
+file.reference.twitter4j-core-3.0.5.jar=G:\\Java Projects\\Libaries\\Twitter4j\\lib\\twitter4j-core-3.0.5.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -41,7 +42,8 @@ javac.classpath=\
     ${file.reference.bukkit-1.7.jar-1}:\
     ${file.reference.craftbukkit-1.7.jar-1}:\
     ${file.reference.activation.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${file.reference.twitter4j-core-3.0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
