--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,21 +29,25 @@ endorsed.classpath=
 excludes=
 file.reference.activation.jar=G:\\Java Projects\\Libaries\\activation.jar
 file.reference.bukkit-1.7.jar-1=G:\\Java Projects\\Libaries\\bukkit-1.7.jar
-file.reference.BukkitLib.jar-1=G:\\Java Projects\\Libaries\\BukkitLib.jar
+file.reference.BukkitLib-1.2.jar=G:\\Java Projects\\Libaries\\BukkitLib-1.2.jar
 file.reference.craftbukkit-1.7.jar-1=G:\\Java Projects\\Libaries\\craftbukkit-1.7.jar
+file.reference.JSONAPI.jar=G:\\Java Projects\\Libaries\\JSONAPI.jar
 file.reference.mail.jar=G:\\Java Projects\\Libaries\\mail.jar
 file.reference.twitter4j-core-3.0.5.jar=G:\\Java Projects\\Libaries\\Twitter4j\\lib\\twitter4j-core-3.0.5.jar
+file.reference.Vault.jar=G:\\Java Projects\\Libaries\\Vault.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.BukkitLib.jar-1}:\
     ${file.reference.bukkit-1.7.jar-1}:\
     ${file.reference.craftbukkit-1.7.jar-1}:\
     ${file.reference.activation.jar}:\
     ${file.reference.mail.jar}:\
-    ${file.reference.twitter4j-core-3.0.5.jar}
+    ${file.reference.twitter4j-core-3.0.5.jar}:\
+    ${file.reference.Vault.jar}:\
+    ${file.reference.BukkitLib-1.2.jar}:\
+    ${file.reference.JSONAPI.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,7 +67,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.BukkitLib.jar-1=G:\\Java Projects\\Libaries\\BukkitLib-javadoc.jar
+javadoc.reference.BukkitLib-1.2.jar=G:\\Java Projects\\Libaries\\BukkitLib-1.2-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
