Added a scoreboard for Kills, Deaths, and K/D

--- a/src/config.yml
+++ b/src/config.yml
@@ -1,4 +1,4 @@
-#TranxCraft Plugin Configuration File By HeXeRei452
+#TranxCraft Plugin Configuration File By WickedGamingUK
 ##
 TotalPlayers: 0
 ##
