Start of the migration over to UUID's - Refinement of TCP_ModeratorList

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,8 @@ javac.classpath=\
     ${libs.BukkitLib.classpath}:\
     ${libs.Craftbukkit.classpath}:\
     ${libs.MySQL.classpath}:\
-    ${libs.Apache_Commons_Codec.classpath}
+    ${libs.Apache_Commons_Codec.classpath}:\
+    ${libs.UUIDBan.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
