--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -78,3 +78,9 @@ commands:
       usage: /<command> <offlineplayer> <reason>
       description: Bans an offline player.
       aliases: [oban, bano, offlineban]
+    grapple:
+      usage: /<command> <enable|disable>
+      description: Turn on or off grapple mode.
+    loginmessage:
+      usage: /<command> <message>
+      description: Sets the custom login message.
