--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,8 +39,7 @@ javac.classpath=\
     ${libs.BukkitLib.classpath}:\
     ${libs.Craftbukkit.classpath}:\
     ${libs.MySQL.classpath}:\
-    ${libs.Apache_Commons_Codec.classpath}:\
-    ${libs.UUIDBan.classpath}
+    ${libs.Apache_Commons_Codec.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
