--- a/build.xml
+++ b/build.xml
@@ -15,29 +15,29 @@
     </target>
     
     <target name="-post-jar">
-
-    <property name="store.jar.name" value="TranxCraft"/>
-
-    <property name="store.dir" value="dist"/>
-    <property name="store.jar" value="${store.dir}/${store.jar.name}.jar"/>
-
-    <echo message="Packaging ${application.title} into a single JAR at ${store.jar}"/>
-
-    <jar destfile="${store.dir}/temp_final.jar" filesetmanifest="skip">
-        <zipgroupfileset dir="dist" includes="*.jar"/>
-        <zipgroupfileset dir="dist/lib" includes="*.jar"/>
-
-        <manifest>
-            <attribute name="Main-Class" value="${main.class}"/>
-        </manifest>
-    </jar>
-
-    <zip destfile="${store.jar}">
-        <zipfileset src="${store.dir}/temp_final.jar"
-        excludes="META-INF/*.SF, META-INF/*.DSA, META-INF/*.RSA"/>
-    </zip>
-
-    <delete file="${store.dir}/temp_final.jar"/>
-    <delete file="${store.dir}/README.TXT"/>
-</target>
+        <echo level="info" message="---- Finalizing Build" />
+            
+        <copy file="${dist.jar}" tofile="${dist.dir}/${ant.project.name}-unmapped.jar" />
+        <delete file="${dist.dir}/${ant.project.name}.jar" />
+        
+        <jar compress="${jar.compress}"  destfile="${dist.jar}">            		
+            <zipfileset src="${dist.dir}/${ant.project.name}-unmapped.jar" excludes="META-INF/*" />
+            
+            <zipgroupfileset dir="${dist.dir}/lib/" includes="BukkitLib*" />
+            <zipgroupfileset dir="${dist.dir}/lib/" includes="twitter4j*" />
+            <zipgroupfileset dir="${dist.dir}/lib/" includes="mail*" />
+            <zipgroupfileset dir="${dist.dir}/lib/" includes="activation*" />
+            <zipgroupfileset dir="${dist.dir}/lib/" includes="commons*" />
+            <zipgroupfileset dir="${dist.dir}/lib/" includes="MySQL*" />
+            
+            <manifest>
+                <attribute name="Main-Class" value="${main.class}" />
+            </manifest>
+        </jar>
+        
+        <delete file="${dist.dir}/README.TXT" />        
+        <delete dir="${dist.dir}/lib/" />
+        
+        <echo level="info" message="---- Done" />
+    </target>
 </project>
