--- a/src/config.yml
+++ b/src/config.yml
@@ -1,6 +1,6 @@
 #TranxCraft Plugin Configuration File By WickedGamingUK
 ##
-TotalPlayers: 0
+total_players: 0
 ##
 #Auto Broadcast  
 prefix: '&4[TranxCraft-Bot]'
@@ -12,43 +12,43 @@ interval: 1800
 ##
 adminmode: false
 #E-mail
-SMTP_HOST:
+smtp_host:
 ##
-SMTP_PORT:
+smtp_port:
 ##
-LOGIN_USERNAME:
+login_username:
 ##
-LOGIN_PASSWORD:
+login_password:
 ##
-EMAIL_FROM:
+email_from:
 ## 
-SYS_MAIL:
+sys_mail:
 ##
-EXECUTIVE_MAIL:
+executive_mail:
 ## 
-LEADADMIN_MAIL:
+leadadmin_mail:
 ## 
-ADMIN_MAIL:
+admin_mail:
 ##
-MODERATOR_MAIL:
+moderator_mail:
 ##
 #Twitter
-CONSUMER_KEY:
+consumer_key:
 ##
-CONSUMER_KEY_SECRET:
+consumer_key_secret:
 ##
-ACCESS_TOKEN:
+access_token:
 ##
-ACCESS_TOKEN_SECRET:
+access_token_secret:
 ##
 #MySQL
-HOSTNAME:
+hostname:
 ##
-PORT:
+port:
 ##
-DATABASE:
+database:
 ##
-USER:
+user:
 ##
-PASSWORD:
+password:
   
