--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,7 +5,6 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=TranxCraft
 application.vendor=Dan
-auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -22,6 +21,8 @@ debug.classpath=\
     ${run.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
+# Files in build.classes.dir which should be excluded from distribution jar
+dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/TranxCraft.jar
@@ -29,17 +30,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
-jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
-jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.Vault.classpath}:\
+    ${libs.MySQL.classpath}:\
     ${libs.Twitter.classpath}:\
+    ${libs.BarAPI.classpath}:\
     ${libs.JavaMail.classpath}:\
     ${libs.BukkitLib.classpath}:\
-    ${libs.Craftbukkit.classpath}:\
-    ${libs.MySQL.classpath}:\
-    ${libs.Apache_Commons_Codec.classpath}
+    ${libs.CraftBukkit.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,24 +62,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jnlp.codebase.type=no.codebase
-jnlp.descriptor=application
-jnlp.enabled=false
-jnlp.mixed.code=default
-jnlp.offline-allowed=false
-jnlp.signed=false
-jnlp.signing=
-jnlp.signing.alias=
-jnlp.signing.keystore=
 main.class=
-# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
-manifest.custom.codebase=
-# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
-manifest.custom.permissions=
-manifest.file=META-INF/manifest.mf
+manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
