--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,9 +36,14 @@ javac.classpath=\
     ${libs.MySQL.classpath}:\
     ${libs.Twitter.classpath}:\
     ${libs.BarAPI.classpath}:\
-    ${libs.JavaMail.classpath}:\
     ${libs.BukkitLib.classpath}:\
-    ${libs.CraftBukkit.classpath}
+    ${libs.CraftBukkit.classpath}:\
+    ${libs.Apache Commons Codec.classpath}:\
+    ${libs.Apache Validator.classpath}:\
+    ${libs.Votifier.classpath}:\
+    ${libs.Essentials.classpath}:\
+    ${libs.Apache Commons Email.classpath}:\
+    ${libs.JavaMail.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
