--- a/src/config.yml
+++ b/src/config.yml
@@ -51,4 +51,14 @@ database:
 user:
 ##
 password:
+##
+registration_hostname:
+##
+registration_port:
+##
+registration_database:
+##
+registration_user:
+##
+registration_password:
   
