Another massive update.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,8 @@ javac.classpath=\
     ${libs.Votifier.classpath}:\
     ${libs.Essentials.classpath}:\
     ${libs.Apache Commons Email.classpath}:\
-    ${libs.JavaMail.classpath}
+    ${libs.JavaMail.classpath}:\
+    ${libs.GroupManager.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
