Started work on a backpack system, plus updates

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -44,7 +44,8 @@ javac.classpath=\
     ${libs.Essentials.classpath}:\
     ${libs.Apache Commons Email.classpath}:\
     ${libs.JavaMail.classpath}:\
-    ${libs.GroupManager.classpath}
+    ${libs.GroupManager.classpath}:\
+    ${libs.JSCH.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
