--- a/build.xml
+++ b/build.xml
@@ -30,6 +30,7 @@
             <zipgroupfileset dir="${dist.dir}/lib/" includes="barapi*" />
             <zipgroupfileset dir="${dist.dir}/lib/" includes="MySQL*" />
             <zipgroupfileset dir="${dist.dir}/lib/" includes="commons*" />
+            <zipgroupfileset dir="${dist.dir}/lib/" includes="jsch*" />
             
             <manifest>
                 <attribute name="Main-Class" value="${main.class}" />
