Wrote a little help feature

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,8 @@ javac.classpath=\
     ${libs.Apache Commons Email.classpath}:\
     ${libs.JavaMail.classpath}:\
     ${libs.GroupManager.classpath}:\
-    ${libs.JSCH.classpath}
+    ${libs.JSCH.classpath}:\
+    ${libs.NoCheatPlus.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
